# qmd_to_pptx

./: .gitignore  AGENTS.md  OOXML_CONSTRAINTS.md  PARSER_DIFF_AND_MIGRATION.md  README.md  README_ja.md  RELEASE.md  check_template.py  default_layout.json  demo_full.pptx  generate_default_layout.py  memo.txt  pyproject.toml
config/: templates.yaml
docs/: CLASS_IMPLEMENT_DESIGN.md  QMD_TO_PPTX_DESIGN.md  QMD_TO_PPTX_REQ_SPEC.md
src/qmd_to_pptx/: __init__.py  dom_traverser.py  formula_renderer.py  markdown_parser.py  mcp_server.py  mermaid_renderer.py  models.py  preprocessor.py  slide_renderer.py  slide_splitter.py  template_registry.py  text_renderer.py  yaml_parser.py
src/qmd_to_pptx/mermaid/: __init__.py  base.py  class_diagram.py  er_diagram.py  flowchart.py  gantt_parser.py  gantt_renderer.py  gitgraph_parser.py  gitgraph_renderer.py  journey_parser.py  journey_renderer.py  mindmap.py  pie_parser.py  pie_renderer.py  quadrant_parser.py  quadrant_renderer.py  renderer.py  requirement_parser.py  requirement_renderer.py  sequence_diagram.py  state_diagram.py  timeline_parser.py  timeline_renderer.py
tests/: demo_full.qmd  test_dom_traverser.py  test_formula_renderer.py  test_gantt.py  test_gitgraph.py  test_integration.py  test_journey.py  test_markdown_parser.py  test_mermaid_flowchart.py  test_mermaid_renderer.py  test_pie_renderer.py  test_preprocessor.py  test_quadrant.py  test_render.py  test_requirement.py  test_sequence_diagram.py  test_slide_renderer.py  test_slide_splitter.py  test_state_diagram.py  test_text_renderer.py  test_timeline.py  test_yaml_parser.py
