[project]
name = "qmd-to-pptx"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "markdown",
    "pymdown-extensions",
    "mermaid-parser-py",
    "networkx",
    "numpy",
    "python-pptx",
    "latex2mathml",
    "mathml2omml",
    "mcp[cli]",
]

[project.scripts]
qmd-to-pptx-mcp = "qmd_to_pptx.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qmd_to_pptx"]
