[project]
name = "qmd-to-pptx"
version = "0.1.2"
description = "Convert QMD/Markdown files to editable PowerPoint presentations"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "notfolder", email = "notfolder@gmail.com" },
]
requires-python = ">=3.11"
keywords = ["quarto", "markdown", "pptx", "powerpoint", "mermaid", "presentation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "markdown",
    "pymdown-extensions",
    "mermaid-parser-py",
    "networkx",
    "numpy",
    "python-pptx",
    "lxml",
    "latex2mathml",
    "mathml2omml",
    "mcp[cli]",
    "pyyaml",
]

[project.scripts]
qmd-to-pptx-mcp = "qmd_to_pptx.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qmd_to_pptx"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
